--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,14 +12,10 @@
 
     <br/>
     <!--/*@thymesVar id="two" type="com.crud.tasks.controller.StaticWebPageController"*/-->
-    <!--/*@thymesVar id="operation1" type="com.crud.tasks.controller.StaticWebPageController"*/-->
-    <!--/*@thymesVar id="operation2" type="com.crud.tasks.controller.StaticWebPageController"*/-->
-    <!--/*@thymesVar id="operation3" type="com.crud.tasks.controller.StaticWebPageController"*/-->
-    <span th:text="${operation1} + ${two} * ${two}"></span>
+    <span th:text="|${two} * ${two} = | + (${two} * ${two})"></span>
     <br/>
-    <span th:text="${operation2}"></span><span th:text="${two} * ${two} + ${two}"></span>
+    <span th:text="|${two} * ${two} + ${two} = | + (${two} * ${two} + ${two})"></span>
     <br/>
-    <span th:text="${operation3}"></span><span th:text="${two} - ${two} * ${two}"></span>
-
+    <span th:text="|${two} - ${two} * ${two} = | + (${two} - ${two} * ${two})"></span>
 </body>
 </html>
